[tool.poetry]
name = "matrixcompletionalgorithmsoverview"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.0"
tqdm = "^4.67.1"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.0"
cupy-cuda12x = "^13.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
